syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service DecreaseStock {
  rpc handle (DecreaseStockRequest) returns (google.protobuf.Empty);
}

message DecreaseStockRequest {
  string id = 1;
  string idempotencyId = 2;
  int32 decreaseStockQuantity = 3;
}